Remove unneeded config, Update readme

--- a/config/.env.dev.dist
+++ b/config/.env.dev.dist
@@ -15,6 +15,9 @@ HAL_DB_PORT='5432'
 HAL_DB_NAME='hal'
 HAL_DB_DRIVER='pdo_pgsql'
 
+HAL_AWS_CREDENTIALS_USE_HOST=''
+HAL_AWS_HOST_CREDENTIALS_PATH=''
+
 HAL_ORM_DEVMODE_ON='1'
 HAL_ORM_PROXY_DIR="${PANTHOR_APPROOT}/.doctrine"
 HAL_ORM_CONFIG_DIR="${PANTHOR_APPROOT}/vendor/hal/hal-core/config/doctrine"
