--- a/composer.json
+++ b/composer.json
@@ -28,9 +28,11 @@
         "ext-sodium":         "~2.0",
         "ext-xmlwriter":      "*",
 
+
+        "aws/aws-sdk-php":          "~3.20",
         "doctrine/orm":             "~2.5.6",
         "guzzlehttp/psr7":          "~1.3",
-        "guzzlehttp/guzzle":        "6.*",
+        "guzzlehttp/guzzle":        "^6.0",
         "knplabs/github-api":       "~2.4.0",
         "neomerx/cors-psr7":        "~1.0",
         "php-http/guzzle6-adapter": "~1.1.0",
