--- a/composer.json
+++ b/composer.json
@@ -19,44 +19,43 @@
         "php-64bit": "~7.1",
 
         "ext-curl":           "*",
-        "ext-ldap":           "*",
         "ext-mbstring":       "*",
         "ext-openssl":        "*",
         "ext-pdo":            "*",
         "ext-pdo_mysql":      "*",
         "ext-pdo_sqlite":     "*",
-        "ext-sodium":         "~2.0",
-        "ext-xmlwriter":      "*",
+        "ext-sodium":         "~2.0 || ~7.2",
+        "ext-zlib":           "*",
 
+        "aws/aws-sdk-php": "~3.50",
+        "doctrine/orm":    "~2.6",
+        "doctrine/cache":  "~1.6",
 
-        "aws/aws-sdk-php":          "~3.20",
-        "doctrine/orm":             "~2.5.6",
+        "guzzlehttp/guzzle":        "~6.0",
         "guzzlehttp/psr7":          "~1.3",
-        "guzzlehttp/guzzle":        "^6.0",
-        "knplabs/github-api":       "~2.4.0",
+        "knplabs/github-api":       "~2.8",
         "neomerx/cors-psr7":        "~1.0",
-        "php-http/guzzle6-adapter": "~1.1.0",
+        "php-http/guzzle6-adapter": "~1.1",
         "predis/predis":            "~1.0",
         "psr/log":                  "*",
 
-        "hal/hal-core":             "dev-master",
+        "hal/hal-core":             "dev-deps",
 
-        "ql/mcp-cache":             "~3.0.0",
-        "ql/mcp-common":            "~1.2",
-        "ql/mcp-logger":            "~3.1",
-        "ql/mcp-panthor":           "~3.2.0",
+        "ql/mcp-common":            "~2.0",
+        "ql/mcp-logger":            "~4.0",
+        "ql/mcp-panthor":           "dev-next",
 
         "slim/slim":                "~3.7",
 
-        "symfony/config":               "~3.3",
-        "symfony/debug":                "~3.3",
-        "symfony/dependency-injection": "~3.3.0",
-        "symfony/dotenv":               "~3.3",
-        "symfony/finder":               "~3.3",
-        "symfony/ldap":                 "~3.3",
-        "symfony/options-resolver":     "~3.3",
-        "symfony/proxy-manager-bridge": "~3.3",
-        "symfony/yaml":                 "~3.3",
+        "symfony/cache":                "~4.0",
+        "symfony/config":               "~4.0",
+        "symfony/debug":                "~4.0",
+        "symfony/dependency-injection": "~4.0",
+        "symfony/dotenv":               "~4.0",
+        "symfony/finder":               "~4.0",
+        "symfony/ldap":                 "~4.0",
+        "symfony/proxy-manager-bridge": "~4.0",
+        "symfony/yaml":                 "~4.0",
 
         "twig/twig": "~2.4",
 
@@ -64,12 +63,12 @@
         "league/oauth2-github": "~2.0.0"
     },
     "require-dev": {
-        "symfony/process":              "~3.3",
-        "symfony/var-dumper":           "~3.3",
+        "symfony/process":    "~4.0",
+        "symfony/var-dumper": "~4.0",
 
-        "overtrue/phplint":             "~1.0",
-        "phpstan/phpstan":              "~0.9",
-        "squizlabs/php_codesniffer":    "~3.0",
+        "overtrue/phplint":          "~1.0",
+        "phpstan/phpstan":           "~0.9",
+        "squizlabs/php_codesniffer": "~3.0",
 
         "codedungeon/phpunit-result-printer": "~0.5",
         "mockery/mockery":                    "~1.0",
