--- a/config/api-internal/controllers.yaml
+++ b/config/api-internal/controllers.yaml
@@ -1,14 +1,16 @@
 services:
 
     api_internal.settings.favorite_applications.add:
+        public: true
         class: 'Hal\UI\Controllers\User\FavoriteApplications\AddFavoriteApplicationHandler'
         arguments:
-            - '@doctrine.em'
+            - '@Doctrine\ORM\EntityManagerInterface'
             - '@uri'
             - '@json'
     api_internal.settings.favorite_applications.remove:
+        public: true
         class: 'Hal\UI\Controllers\User\FavoriteApplications\RemoveFavoriteApplicationHandler'
         arguments:
-            - '@doctrine.em'
+            - '@Doctrine\ORM\EntityManagerInterface'
             - '@uri'
             - '@json'
