--- a/config/ui/middleware.yaml
+++ b/config/ui/middleware.yaml
@@ -5,31 +5,39 @@ services:
     ####################################################################################################################
 
     middleware.signed_in:
+        public: true
         class: 'Hal\UI\Middleware\ACL\SignedInMiddleware'
-        arguments: ['@uri']
+        arguments:
+            - '@uri'
 
     middleware.is_admin:
+        public: true
         class: 'Hal\UI\Middleware\ACL\AdminMiddleware'
         parent: 'middleware.permissions'
 
     middleware.is_super:
+        public: true
         class: 'Hal\UI\Middleware\ACL\SuperMiddleware'
         parent: 'middleware.permissions'
 
     middleware.is_owner:
+        public: true
         class: 'Hal\UI\Middleware\ACL\OwnerMiddleware'
         parent: 'middleware.permissions'
 
     middleware.is_admin_or_self:
+        public: true
         class: 'Hal\UI\Middleware\ACL\AdminOrSelfMiddleware'
         parent: 'middleware.permissions'
 
     middleware.permissions:
+        public: true
         class: 'Hal\UI\Middleware\ACL\AbstractPermissionMiddleware'
         arguments:
             - '@middleware.signed_in'
             - '@middleware.permissions.twig'
     middleware.permissions.twig:
+        public: true
         parent: 'twig.template'
         calls: [['setTemplate', ['error.denied.twig']]]
 
@@ -38,58 +46,83 @@ services:
     ####################################################################################################################
 
     middleware.require_csrf:
+        public: true
         class: 'Hal\UI\Middleware\CSRFMiddleware'
-        arguments: ['@csrf']
+        arguments:
+            - '@Hal\UI\Security\CSRFManager'
 
     ####################################################################################################################
     # entity loading
     ####################################################################################################################
 
     middleware.require_entity:
+        public: true
         class: 'Hal\UI\Middleware\RequireEntityMiddleware'
-        arguments: ['@doctrine.em', '@notFoundHandler']
+        arguments:
+            - '@Doctrine\ORM\EntityManagerInterface'
+            - '@notFoundHandler'
 
     middleware.nested_entity:
+        public: true
         class: 'Hal\UI\Middleware\NestedEntityMiddleware'
-        arguments: ['@notFoundHandler']
+        arguments:
+            - '@notFoundHandler'
 
     ####################################################################################################################
     # entity removals
     ####################################################################################################################
 
     middleware.removal_confirmation.twig:
+        public: true
         parent: 'twig.template'
         calls: [['setTemplate', ['delete.confirm.twig']]]
 
     middleware.removal_confirmation.token:
+        public: true
         class: 'Hal\UI\Middleware\RemovalConfirmationMiddleware'
         arguments: ['@middleware.removal_confirmation.twig', 'user_token']
+
     middleware.removal_confirmation.organization:
+        public: true
         class: 'Hal\UI\Middleware\RemovalConfirmationMiddleware'
         arguments: ['@middleware.removal_confirmation.twig', 'organization']
+
     middleware.removal_confirmation.application:
+        public: true
         class: 'Hal\UI\Middleware\RemovalConfirmationMiddleware'
         arguments: ['@middleware.removal_confirmation.twig', 'application']
+
     middleware.removal_confirmation.target:
+        public: true
         class: 'Hal\UI\Middleware\RemovalConfirmationMiddleware'
         arguments: ['@middleware.removal_confirmation.twig', 'target']
+
     middleware.removal_confirmation.encrypted:
+        public: true
         class: 'Hal\UI\Middleware\RemovalConfirmationMiddleware'
         arguments: ['@middleware.removal_confirmation.twig', 'encrypted']
 
     middleware.removal_confirmation.template:
+        public: true
         class: 'Hal\UI\Middleware\RemovalConfirmationMiddleware'
         arguments: ['@middleware.removal_confirmation.twig', 'template']
+
     middleware.removal_confirmation.environment:
+        public: true
         class: 'Hal\UI\Middleware\RemovalConfirmationMiddleware'
         arguments: ['@middleware.removal_confirmation.twig', 'environment']
+
     middleware.removal_confirmation.credential:
+        public: true
         class: 'Hal\UI\Middleware\RemovalConfirmationMiddleware'
         arguments: ['@middleware.removal_confirmation.twig', 'credential']
 
     middleware.removal_confirmation.vcs_provider:
+        public: true
         class: 'Hal\UI\Middleware\RemovalConfirmationMiddleware'
         arguments: ['@middleware.removal_confirmation.twig', 'system_vcs']
+
     middleware.removal_confirmation.id_provider:
+        public: true
         class: 'Hal\UI\Middleware\RemovalConfirmationMiddleware'
         arguments: ['@middleware.removal_confirmation.twig', 'system_idp']
