--- a/config/ui/templating.yaml
+++ b/config/ui/templating.yaml
@@ -8,7 +8,7 @@ services:
     twig.extension.github:
         class: 'Hal\UI\Twig\GitHubExtension'
         arguments:
-            - '@Hal\Core\VersionControl\VCS'
+            - '@Hal\Core\VersionControl\VCSFactory'
         calls:
             - ['setCache', ['@vcs.cache']]
 
